--- a/components/WalkthroughCollection/styles.module.scss
+++ b/components/WalkthroughCollection/styles.module.scss
@@ -2,6 +2,7 @@
   background: #ffffff;
   box-shadow: 0rem 0.17rem 2.5rem 0rem #ece7f4;
   padding: 1.33rem 1rem 1.67rem;
+  border-radius: 1rem;
 
   .collectionHeader {
     display: flex;
