--- a/styles/strategy_article.module.scss
+++ b/styles/strategy_article.module.scss
@@ -50,6 +50,54 @@
   }
 }
 
+.mobileStepAnchorBox {
+  position: fixed;
+  z-index: 12000;
+  top: 0;
+  width: 31.25rem;
+  height: 3.33rem;
+  background: #ffffff;
+  box-shadow: 0rem 0.17rem 0.33rem 0rem rgba(0, 0, 0, 0.2);
+  padding: 0 1.33rem;
+  display: flex;
+  align-items: center;
+
+  overflow-x: scroll;
+
+  .innerListWrapper {
+    width: auto;
+    display: flex;
+    align-items: center;
+  }
+
+  .stepAnchorStep {
+    width: 6.67rem;
+    height: 2.33rem;
+    border-radius: 1.17rem;
+    background-color: rgba(#222, 0.05);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.17rem;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
+    line-height: 1.17rem;
+    color: #222222;
+    user-select: nonec;
+    cursor: pointer;
+
+    & + .stepAnchorStep {
+      margin-left: 0.67rem;
+    }
+  }
+
+  .activeAnchor {
+    background: rgba(#8e50e4, 0.08);
+    color: #8e50e4;
+  }
+}
+
 .contentBox {
   padding: 1.67rem 1.33rem;
   border-top: 0.87rem solid #f4f4f9;
@@ -175,7 +223,6 @@
 
       user-select: none;
       cursor: pointer;
-
     }
     .verifyBtn {
       width: 7.33rem;
