--- a/components/LayoutArticle/styles.module.scss
+++ b/components/LayoutArticle/styles.module.scss
@@ -3,10 +3,11 @@
   margin: auto;
 
   // margin-top: 6rem;
-  overflow: hidden;
+  // overflow: hidden;
   color: black;
   // width: 100rem;
   font-size: 1.33rem;
+  position: relative;
 }
 
 @media screen and (max-width: 1024px){
