--- a/components/PageArticle/ArticleStep/styles.module.scss
+++ b/components/PageArticle/ArticleStep/styles.module.scss
@@ -14,9 +14,27 @@
   }
 
   :global {
+    h3 {
+      font-size: 1.17rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #222222;
+      line-height: 1.17rem;
+    }
+    p {
+      font-size: 1.17rem;
+      font-family: Inter-Regular, Inter;
+      font-weight: 400;
+      color: #222222;
+      line-height: 2rem;
+    }
     img {
       max-width: 100%;
-      margin: auto;
+      margin: 0.5rem auto;
+    }
+
+    a {
+      text-decoration: underline;
     }
   }
 }
