--- a/styles/strategy_article.module.scss
+++ b/styles/strategy_article.module.scss
@@ -37,6 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 0.83rem;
   p {
     font-size: 1.17rem;
     font-family: Inter-Medium, Inter;
@@ -97,6 +98,9 @@
     color: #8e50e4;
   }
 }
+.hiddenAnchorBox {
+  display: none;
+}
 
 .contentBox {
   padding: 1.67rem 1.33rem;
@@ -108,6 +112,7 @@
     font-weight: 600;
     color: #222222;
     line-height: 2rem;
+    margin-bottom: 0.5rem;
 
     overflow: hidden;
     text-overflow: ellipsis;
