--- a/components/GameActivityCarousel/styles.module.scss
+++ b/components/GameActivityCarousel/styles.module.scss
@@ -1,7 +1,7 @@
 .activityBox {
   padding-bottom: 3rem;
-  padding-left: 1.33rem;
-  padding-right: 1.33rem;
+  // padding-left: 1.33rem;
+  // padding-right: 1.33rem;
 }
 
 .sliderBox {
