feat: game article detail

--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -2,6 +2,7 @@
   height: 6rem;
   background: #ffffff;
   position: fixed;
+  top: 0px;
   width: 100%;
   z-index: 1500;
   box-shadow: rgb(229, 232, 235) 0px 1px 0px 0px;
