--- a/styles/strategy_article.module.scss
+++ b/styles/strategy_article.module.scss
@@ -49,13 +49,19 @@
       color: rgba(142, 80, 228, 1);
     }
   }
+
+  .collectionList {
+    :global {
+     
+    }
+  }
 }
 
 .mobileStepAnchorBox {
   position: fixed;
   z-index: 12000;
   top: 0;
-  width: 31.25rem;
+  width: 100%;
   height: 3.33rem;
   background: #ffffff;
   box-shadow: 0rem 0.17rem 0.33rem 0rem rgba(0, 0, 0, 0.2);
@@ -131,6 +137,7 @@
       font-weight: 500;
       color: rgba(#222, 0.3);
       line-height: 1rem;
+      flex-grow: 1;
     }
 
     .shareBtn {
@@ -245,5 +252,24 @@
       cursor: pointer;
       user-select: none;
     }
+  }
+}
+
+
+@media screen and (min-width: 600px){
+  .contentBox {
+    max-width: 100rem;
+    margin: auto;
+    padding-left: 0;
+    padding-right: 0;
+    // margin-top: 3rem;
+
+  }
+  .headerBox {
+    margin: auto;
+    margin-top: 8rem;
+    margin-bottom: 1rem;
+    max-width: 100rem;
+
   }
 }
