feat: update game news twitter config

--- a/styles/strategy_article.module.scss
+++ b/styles/strategy_article.module.scss
@@ -111,6 +111,7 @@
 .contentBox {
   padding: 1.67rem 1.33rem;
   border-top: 0.87rem solid #f4f4f9;
+  width: 100%;
 
   h1 {
     font-size: 1.5rem;
