--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -54,7 +54,9 @@
     left: 0;
     right: 0;
     height: 4rem;
-    background: #8e50e4;
+    // background: #8e50e4;
+    background: linear-gradient(270deg, #222222 0%, #8E50E4 100%);
+
     border-radius: 1rem 1rem 0rem 0rem;
     display: flex;
     align-items: center;
