--- a/components/PageGame/ProxyPlayCard/styles.module.scss
+++ b/components/PageGame/ProxyPlayCard/styles.module.scss
@@ -1,15 +1,15 @@
 .proxyCard {
-  height: 13.33rem;
+  height: 15rem;
   border-radius: 1rem;
   overflow: hidden;
 
-  padding: 1.33rem 1.33rem 1.5rem;
+  padding: 1.67rem 1.67rem 2.17rem;
 
   .userInfo {
     display: flex;
     align-items: flex-start;
 
-    padding-bottom: 1.33rem;
+    padding-bottom: 1.67rem;
     border-bottom: 1px solid rgba(#fff, 0.2);
 
     .userLogo {
@@ -27,11 +27,11 @@
     .nameBox {
       h4 {
         margin-top: 0.42rem;
-        font-size: 1.5rem;
+        font-size: 1.75rem;
         font-family: Inter-SemiBold, Inter;
         font-weight: 600;
         color: #ffffff;
-        line-height: 1.5rem;
+        line-height: 1.75rem;
       }
       p {
         font-size: 1.17rem;
@@ -54,17 +54,17 @@
   .priceInfo {
     display: flex;
     align-items: center;
-    margin-top: 1.42rem;
+    margin-top: 1.75rem;
 
     .hourPrice {
       width: 40%;
       display: inline-flex;
       align-items: center;
-      font-size: 1.17rem;
+      font-size: 1.33rem;
       font-family: Inter-SemiBold, Inter;
       font-weight: 600;
       color: #ffffff;
-      line-height: 1.17rem;
+      line-height: 1.33rem;
       p {
         margin-left: 0.42rem;
       }
@@ -75,11 +75,99 @@
       p {
         margin-left: 0.42rem;
       }
-      font-size: 1.17rem;
+      font-size: 1.33rem;
       font-family: Inter-SemiBold, Inter;
       font-weight: 600;
       color: #ffffff;
-      line-height: 1.17rem;
+      line-height: 1.33rem;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .proxyCard {
+    height: 13.33rem;
+    border-radius: 1rem;
+    overflow: hidden;
+
+    padding: 1.33rem 1.33rem 1.5rem;
+
+    .userInfo {
+      display: flex;
+      align-items: flex-start;
+
+      padding-bottom: 1.33rem;
+      border-bottom: 1px solid rgba(#fff, 0.2);
+
+      .userLogo {
+        flex-shrink: 0;
+        flex-grow: 0;
+        width: 6rem;
+        height: 6rem;
+        margin-right: 0.83rem;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+        }
+      }
+      .nameBox {
+        h4 {
+          margin-top: 0.42rem;
+          font-size: 1.5rem;
+          font-family: Inter-SemiBold, Inter;
+          font-weight: 600;
+          color: #ffffff;
+          line-height: 1.5rem;
+        }
+        p {
+          font-size: 1.17rem;
+          font-family: Inter-Medium, Inter;
+          font-weight: 500;
+          color: #ffffff;
+          line-height: 1.5rem;
+
+          margin-top: 0.67rem;
+
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 2;
+        }
+      }
+    }
+
+    .priceInfo {
+      display: flex;
+      align-items: center;
+      margin-top: 1.42rem;
+
+      .hourPrice {
+        width: 40%;
+        display: inline-flex;
+        align-items: center;
+        font-size: 1.17rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #ffffff;
+        line-height: 1.17rem;
+        p {
+          margin-left: 0.42rem;
+        }
+      }
+      .rankInfo {
+        display: inline-flex;
+        align-items: center;
+        p {
+          margin-left: 0.42rem;
+        }
+        font-size: 1.17rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #ffffff;
+        line-height: 1.17rem;
+      }
     }
   }
 }
