--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -317,10 +317,10 @@
   position: relative;
   padding: 1.67rem 1.33rem;
   // background-color: white;
-  background: #F6EFFF;
+  background: #f6efff;
   // box-shadow: 0rem 0.83rem 1.67rem 0rem rgba(142, 80, 228, 0.2);
   border-radius: 0.67rem;
-  border-top: 0.83rem solid #F6EFFF;
+  border-top: 0.83rem solid #f6efff;
 
   .itemLabel {
     position: absolute;
@@ -369,17 +369,17 @@
     align-items: flex-start;
     justify-content: flex-start;
     font-size: 1.33rem;
-    font-family: Inter-Medium, Inter;
-    font-weight: 500;
-    color: #222222;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
+    color: #ff9500;
     line-height: 1.67rem;
-    margin-top: 1.25rem;
-    margin-bottom: 1.75rem;
+    margin-top: 1rem;
+    margin-bottom: 1.58rem;
     .iconBox {
       flex-shrink: 0;
       position: relative;
-      width: 2rem;
-      height: 2rem;
+      width: 1.67rem;
+      height: 1.67rem;
       margin-right: 0.42rem;
     }
   }
@@ -394,8 +394,8 @@
     .iconBox {
       flex-shrink: 0;
       position: relative;
-      width: 2rem;
-      height: 2rem;
+      width: 1.67rem;
+      height: 1.67rem;
       margin-right: 0.42rem;
     }
   }
