--- a/components/PageGame/GameHomeTab.tsx/styles.module.scss
+++ b/components/PageGame/GameHomeTab.tsx/styles.module.scss
@@ -3,19 +3,18 @@
 
 .rewardMainBox {
   // background: #f4f4f9;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .activityBox {
-  // padding: 0 1rem;
   h2 {
-    font-size: 1.75rem;
-    font-family: Inter-Bold, Inter;
-    font-weight: bold;
+    font-size: 2rem;
+    font-family: Inter-SemiBold, Inter;
+    font-weight: 600;
     color: #222222;
-    line-height: 1.75rem;
-    margin-top: 1.67rem;
-    margin-bottom: 1.33rem;
+    line-height: 2rem;
+    margin-top: 3.33rem;
+    margin-bottom: 2.5rem;
   }
 }
 
@@ -28,7 +27,7 @@
     font-weight: bold;
     color: #222222;
     line-height: 1.75rem;
-    margin-bottom: 1.42rem;
+    margin-bottom: 2.5rem;
   }
 }
 
@@ -141,10 +140,13 @@
   .workthroughBox {
     padding: 1.67rem 0rem 2.5rem;
     min-height: 230px;
+    h3 {
+      margin-bottom: 1.42rem;
+    }
   }
   .carnivalRewrads {
     width: 100%;
-    padding: 1.67rem 1rem;
+    padding: 1.67rem 0rem;
     .cardHeader {
       p {
         font-size: 1.75rem;
@@ -179,6 +181,18 @@
         color: #222222;
         line-height: 1.67rem;
       }
+    }
+  }
+
+  .activityBox {
+    h2 {
+      font-size: 1.75rem;
+      font-family: Inter-Bold, Inter;
+      font-weight: bold;
+      color: #222222;
+      line-height: 1.75rem;
+      margin-top: 1.67rem;
+      margin-bottom: 1.33rem;
     }
   }
 }
