--- a/components/PageGame/GameNewsTab.tsx/styles.module.scss
+++ b/components/PageGame/GameNewsTab.tsx/styles.module.scss
@@ -1,5 +1,5 @@
 .newsTabBox {
-  padding-top: 2rem;
+  padding-top: 3.33rem;
   width: 100%;
   max-width: 100rem;
   .videoBox {
@@ -28,13 +28,14 @@
   }
 
   .newsBox {
+    padding-bottom: 5rem;
     h3 {
       font-size: 2rem;
       font-family: Inter-SemiBold, Inter;
       font-weight: 600;
       color: #222222;
       line-height: 2rem;
-      margin-bottom: 1.67rem;
+      margin-bottom: 2.5rem;
     }
     .twitterContainer {
       width: 100%;
