--- a/components/PageGame/PageGameArticleItem/styles.module.scss
+++ b/components/PageGame/PageGameArticleItem/styles.module.scss
@@ -1,9 +1,9 @@
 .articleItem {
   position: relative;
-  z-index: 10;
+  z-index: 100;
   display: flex;
   align-items: center;
-  padding: 1.21rem 0;
+  padding: 0.83rem 0;
   cursor: pointer;
 
   .itemSort {
@@ -21,16 +21,16 @@
     font-family: Inter-Medium, Inter;
     font-weight: 500;
     color: #222222;
-    // line-height: 1.17rem;
+    background-color: white;
 
-    margin-right: 1.17rem;
+    margin-right: 0.92rem;
   }
   .itemSortActive {
     background: #96fcc8;
   }
 
   .articleTitle {
-    font-size: 1.17rem;
+    font-size: 1.33rem;
     font-family: Inter-Medium, Inter;
     font-weight: 500;
     color: #222222;
@@ -40,5 +40,54 @@
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
+  }
+  .artiveArticleColor {
+    color: rgba(142, 80, 228, 1);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .articleItem {
+    position: relative;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    padding: 1.21rem 0;
+    cursor: pointer;
+
+    .itemSort {
+      flex-shrink: 0;
+      flex-grow: 0;
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      border: 0.08rem solid #000000;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.33rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+
+      margin-right: 1.17rem;
+    }
+    .itemSortActive {
+      background: #96fcc8;
+    }
+
+    .articleTitle {
+      font-size: 1.17rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+      line-height: 1.5rem;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+    }
   }
 }
