--- a/components/SocialMediaShare/styles.module.scss
+++ b/components/SocialMediaShare/styles.module.scss
@@ -1,3 +1,27 @@
+.shareItemPC {
+  display: flex;
+  align-items: center;
+  padding: 0.3rem 0 !important;
+
+  .shareMediaLogo {
+    width: 2.67rem;
+    height: 2.67rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  p {
+    font-size: 1.17rem;
+    font-family: Inter-Medium, Inter;
+    font-weight: 500;
+    color: #222222;
+    line-height: 1.17rem;
+    margin-left: 0.83rem;
+  }
+}
+
 .drawerBox {
   :global {
     .MuiPaper-root {
