--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -4,6 +4,7 @@
   .topCover {
     height: 20rem;
     position: relative;
+    background-color: #f9f9f9;
   }
 
   .gameInfoBox {
@@ -76,27 +77,27 @@
               }
 
               .ant-tabs-tab:nth-child(3) {
-                &::after {
-                  content: 'New';
-                  position: absolute;
-                  z-index: 10;
-                  top: 0.4rem;
-                  right: -3.2rem;
-                  display: inline-flex;
-                  align-items: center;
-                  justify-content: center;
-                  width: 3rem;
-                  height: 1.33rem;
-                  background: linear-gradient(135deg, #ffa57e 0%, #ff4e00 100%);
-                  box-shadow: 0rem 0.17rem 0.33rem 0rem rgba(200, 61, 0, 0.3);
-                  border-radius: 0.75rem 0.75rem 0.75rem 0rem;
+                // &::after {
+                //   content: 'New';
+                //   position: absolute;
+                //   z-index: 10;
+                //   top: 0.4rem;
+                //   right: -3.2rem;
+                //   display: inline-flex;
+                //   align-items: center;
+                //   justify-content: center;
+                //   width: 3rem;
+                //   height: 1.33rem;
+                //   background: linear-gradient(135deg, #ffa57e 0%, #ff4e00 100%);
+                //   box-shadow: 0rem 0.17rem 0.33rem 0rem rgba(200, 61, 0, 0.3);
+                //   border-radius: 0.75rem 0.75rem 0.75rem 0rem;
 
-                  font-size: 0.83rem;
-                  font-family: Inter-Bold, Inter;
-                  font-weight: bold;
-                  color: #ffffff;
-                  line-height: 0.83rem;
-                }
+                //   font-size: 0.83rem;
+                //   font-family: Inter-Bold, Inter;
+                //   font-weight: bold;
+                //   color: #ffffff;
+                //   line-height: 0.83rem;
+                // }
               }
 
               .ant-tabs-tab-active {
