--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,8 @@ a {
   z-index: 1700 !important;
 }
 
-.ant-dropdown-menu-title-content a > div {
-  padding: 0.5rem 0 !important;
+@media screen and (max-width: 600px) {
+  .ant-dropdown-menu-title-content a > div {
+    padding: 0.5rem 0 !important;
+  }
 }
