--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -27,6 +27,7 @@
     justify-content: center;
     margin: auto;
     border-bottom: 10px solid #f9f9f9;
+    padding-bottom: 5rem;
     min-height: 20rem;
 
     & > div {
